syntax = "proto3";

package proto;

service EltonService {
	rpc GenerateObjectsInfo(ObjectsInfo) returns (stream ObjectInfo) {};
	rpc CommitObjectsInfo(ObjectsInfo) returns (EmptyMessage) {};
	rpc GetObject(ObjectInfo) returns (stream Object) {};
	rpc PutObject(Object) returns (EmptyMessage) {};
	rpc DeleteObject(ObjectInfo) returns (EmptyMessage) {};
}

message ObjectsInfo {
	repeated ObjectInfo objects = 1;
}

message ObjectInfo {
	string object_id = 1;
	uint64 version = 2;
	string delegate = 3;
	string request_hostname = 4;
}

message Object {
	string body = 1;
}

message EmptyMessage {
}
